Lots of improvements. Added action bar/action mode. Added the ability to delete devices. Action bar up now works as it should